# albatross

./: .clineignore  .editorconfig  .env  .gitattributes  .gitignore  .markdownlint.json  Cargo.toml  README.md  biome.json  docker-compose.infra.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.clinerules/: 01-memory-bank.md  02-coding.md  baby-steps.md  cline-continous-improvement-protocol.md  mermaid-plans.md  new-task-automation.md  sequential-thinking.md
.clinerules/workflows/: self-improving-cline.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.sqlx/: query-00e176124d4a5d5ff7babda1a0b367c0a94734d58d13b044b64130bd0c6f0df5.json  query-209308c1fa7b6274a3d1b83507338fecbfeee7de9ac6d7f814ce40c28c3edbc3.json  query-a4f8225bc2cd7bb68e530235ad48b140178eda1c4fc0c97665492bd2714eac92.json  query-d1203c829552f8344045f1cbc877ea9e6f201ef7e8ed5f5a4298e8f359cd8373.json
apps/api-gateway/: .env  Cargo.toml
apps/api-gateway/.sqlx/: query-3ca8b9ffc631d8fbae377da35ac14da5fa23fdf91715e43e249e9c2881558d7a.json
apps/api-gateway/migrations/: 02__add_user_api_keys.sql  03__create_events_table.sql
apps/api-gateway/src/: lib.rs  main.rs
apps/api-gateway/src/application/: authz.rs  mod.rs  query.rs  ws.rs
apps/api-gateway/src/application/commands/: change_password.rs  create_tenant.rs  generate_api_key.rs  login.rs  mod.rs  register_user.rs  revoke_api_key.rs
apps/api-gateway/src/application/middleware/: auth.rs  mod.rs
apps/api-gateway/tests/: api_key_routes.rs  login_endpoint.rs  query_routes.rs  ws_envelope.rs
apps/projection-worker/: .env  Cargo.toml
apps/projection-worker/.sqlx/: query-2814809fd0ad69dcc000383406dceccf62656672598bda25749411f17f9defc3.json
apps/projection-worker/migrations/: 01__initial_read_models.sql
apps/projection-worker/src/: main.rs  models.rs
apps/web-ui/: package.json  vitest.config.ts
apps/web-ui/src/: App.integration.test.tsx  App.test.tsx  App.tsx  main.tsx
apps/web-ui/src/api/: client.test.ts  client.ts
apps/web-ui/src/components/: ApiKeyPanel.tsx  BootstrapAdminForm.tsx  ChangePasswordForm.tsx  LoginForm.test.tsx  LoginForm.tsx  TenantCreateForm.tsx  TenantList.tsx  UserCreateForm.tsx  UserList.tsx
apps/web-ui/src/hooks/: useTenants.test.tsx  useTenants.ts  useUserApiKeys.ts  useUsers.test.ts  useUsers.ts
apps/web-ui/src/pages/: AccountPage.tsx  ApiKeysPage.tsx  DashboardPage.tsx  TenantsPage.tsx  UsersPage.tsx
apps/web-ui/src/realtime/: mapper.test.ts  mapper.ts  useRealtime.tsx
apps/web-ui/src/state/: ApiKeyContext.tsx
doc/conversations/: 2025-04-05-initial.md  thoughts.md
doc/plans/: phase-1-plan.md  phase-1-step-10-plan.md  phase-1-step-11-plan.md  phase-1-step-8-plan.md  phase-1-step-9-plan.md  phase-1.5-plan.md
infra/helm/: README.md
libs/core-lib/: Cargo.toml
libs/core-lib/src/: lib.rs
libs/core-lib/src/adapters/: in_memory_cache.rs  in_memory_event_bus.rs  in_memory_repository.rs  mod.rs  postgres_repository.rs  rabbitmq_event_bus.rs  redis_cache.rs  redis_event_bus.rs
libs/core-lib/src/domain/: mod.rs  pirep.rs  tenant.rs  user.rs
libs/es/: Cargo.toml
libs/es/src/: aggregate.rs  binarize.rs  cqrs.rs  event.rs  lib.rs  mem_store.rs  persist.rs  query.rs  store.rs
libs/es/src/persist/: error.rs  event_repository.rs  event_store.rs  serialized_event.rs
libs/proto/: Cargo.toml  build.rs
libs/proto/src/: lib.rs
libs/proto/src/proto/: pirep.proto  tenant.proto  user.proto
memory-bank/: activeContext.md  changelog.md  consolidated_learnings.md  productContext.md  progress.md  projectbrief.md  raw_reflection_log.md  systemPatterns.md  techContext.md
scripts/: README.md  reset-database.sh  update-sqlx-metadata.sh
