[workspace]
resolver = "3"
members = [
    "apps/api-gateway",
    "apps/projection-worker",
    "libs/core-lib",
    "libs/es",
    "libs/proto",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
core-lib = { version = "0.1.0", path = "libs/core-lib" }
cqrs-es = { version = "0.1.0", path = "libs/es" }
proto = { version = "0.1.0", path = "libs/proto" }

async-trait = "0.1"
axum = "0.8.3"
chrono = "0.4"
dashmap = "6.1"
dotenvy = "0.15"
futures-util = "0.3"
http = "1.3.1"
lapin = "2.3"
mime_guess = "2.0.5"
moka = "0.12"
once_cell = "1"
prost = "0.13"
prost-build = "0.13.5"
redis = "0.29"
refinery = "0.8"
rust-embed = "8.6"
serde = "1.0"
serde_json = "1.0"
sqlx = "0.8"
testcontainers = "0.23"
testcontainers-modules = "0.11.0"
thiserror = "2.0"
tokio = "1"
tokio-postgres = "0.7"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3.19"
uuid = "1.10"
