[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-lib.workspace = true
cqrs-es.workspace = true
proto.workspace = true

async-trait.workspace = true
axum.workspace = true
http.workspace = true
mime_guess.workspace = true
prost.workspace = true
rust-embed = { workspace = true, features = ["include-exclude"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] } # Added env-filter feature
uuid = { workspace = true, features = ["v4", "serde"] }
rand = "0.9.1" # Reverted to simple version
argon2 = "0.5.3" # Keep argon2 specific for now, or move to workspace if needed elsewhere

[dev-dependencies]
axum-test = "17.3.0"
