[package]
name = "projection-worker"
version.workspace = true
edition.workspace = true

[dependencies]
core-lib.workspace = true
proto.workspace = true

async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] } # For timestamps
dotenvy.workspace = true
futures-util.workspace = true # For StreamExt
lapin.workspace = true # For direct RabbitMQ interaction
prost.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] } # For IDs

# Tell sqlx-cli where to find migrations for 'cargo sqlx prepare'
[package.metadata.sqlx]
migrations = "migrations"
