[package]
name = "core-lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { version = "0.1.0", path = "../proto" }
async-trait = "0.1"
thiserror = "2.0"
dashmap = "6.1" # For InMemory adapters
moka = { version = "0.12", features = ["future"] } # For InMemoryCache
tokio = { version = "1", features = ["sync", "rt-multi-thread"] } # For InMemoryEventBus and tests
