[package]
name = "core-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { version = "0.1.0", path = "../proto" }
async-trait = "0.1"
thiserror = "2.0"
dashmap = "6.1"                                                   # For InMemory adapters
moka = { version = "0.12", features = ["future"] }                # For InMemoryCache
prost = "0.13"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
tokio-stream = "0.1"
futures-util = "0.3"
tracing = "0.1"

# Real Infrastructure Adapters & Testing
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
lapin = "2.3"
redis = { version = "0.29", features = ["tokio-comp"] }
testcontainers = "0.23"

[dev-dependencies] # Added dev-dependencies section
testcontainers-modules = { version = "0.11.0", features = [
    "postgres",
    "rabbitmq",
    "redis",
] }
once_cell = "1"
dotenvy = "0.15"
