[package]
name = "core-lib"
version.workspace = true
edition = "2021"

[dependencies]
proto.workspace = true

async-trait.workspace = true
futures-util.workspace = true
dashmap.workspace = true
lapin.workspace = true
moka = { workspace = true, features = ["future"] }
prost.workspace = true
redis = { workspace = true, features = ["tokio-comp"] }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
testcontainers.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies] # Added dev-dependencies section
dotenvy.workspace = true
once_cell.workspace = true
testcontainers-modules = { workspace = true, features = [
    "postgres",
    "rabbitmq",
    "redis",
] }
