[package]
name = "proto"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost.workspace = true
serde = { workspace = true, features = ["derive"] } # Added for Serialize derive

[build-dependencies]
prost-build.workspace = true
tokio = { workspace = true, features = ["full"] }
